[package]
name = "magma_app"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Part of the Magma-API, which is the API of the Magma3D game engine."
homepage = "https://dynamicgoose.github.io/magma3d-engine/"
license = "MIT"
repository = "https://github.com/DynamicGoose/magma-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magma_ecs = "0.1.0-alpha.2"
