[package]
name = "magma_app"
version = "0.2.0-alpha.4"
edition = "2024"
description = "Part of the Magma-API, which is the API of the Magma3D game engine."
homepage = "https://dynamicgoose.github.io/magma3d-engine/"
license = "MIT"
repository = "https://codeberg.org/DynamicGoose/magma-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magma_ecs = "0.4.0-alpha"
thiserror = "2.0.16"
