[package]
name = "magma_audio"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT"
description = "Audio features for the Magma3D engine"
homepage = "https://dynamicgoose.github.io/magma3d-engine/"
repository = "https://github.com/DynamicGoose/magma-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kira = "0.8.5"
magma_app = { path = "../magma_app", version = "0.1.0-alpha.3" }
