[package]
name = "magma_render"
version = "0.1.0-alpha"
edition = "2024"
description = "Partt of the Magma-API. Rendering Capability for the engine."
homepage = "https://dynamicgoose.github.io/magma3d-engine/"
license = "MIT"
repository = "https://codeberg.org/DynamicGoose/magma-api"

[dependencies]
feufeu = "0.1.0-alpha.4"
magma_app = { path = "../magma_app", version = "0.2.0-alpha.3" }
magma_winit = { path = "../magma_winit", version = "0.1.0-alpha.8" }
magma_windowing = { path = "../magma_windowing", version = "0.1.0-alpha" }
magma_math = { path = "../magma_math", version = "0.1.0-alpha" }
winit = { version = "0.30.11", features = ["rwh_05"] }

# needs to run on main thread bc winit
[[test]]
name = "rendering_tests"
path = "tests/main.rs"
harness = false
