[package]
name = "magma_ui"
version = "0.1.0-alpha.2"
edition = "2021"
description = "Part of the Magma-API, which is the API of the Magma3D game engine. This is responsable for UI."
homepage = "https://dynamicgoose.github.io/magma3d-engine/"
license = "MIT"
repository = "https://github.com/DynamicGoose/magma-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magma_app = { path = "../magma_app", version = "0.2.0-alpha" }
magma_winit = { path = "../magma_winit", version = "0.1.0-alpha.4" }
