[package]
name = "magma_winit"
version = "0.1.0-alpha.3"
edition = "2021"
description = "Part of the Magma-API, which is the API of the Magma3D game engine. This is responsable for handling windows."
homepage = "https://dynamicgoose.github.io/magma3d-engine/"
license = "MIT"
repository = "https://github.com/DynamicGoose/magma-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magma_app = { path = "../magma_app", version = "0.1.0-alpha.3" }
winit = "0.29.4"

# These need to be run on the main thread, which normal tests don't do
[[test]]
name = "winit_tests"
path = "tests/main.rs"
harness = false
