[package]
name = "magma_winit"
version = "0.1.0-alpha.6"
edition = "2024"
description = "Part of the Magma-API, which is the API of the Magma3D game engine. A winit windowing backend implementation."
homepage = "https://dynamicgoose.github.io/magma3d-engine/"
license = "MIT"
repository = "https://codeberg.com/DynamicGoose/magma-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magma_app = { path = "../magma_app", version = "0.2.0-alpha.2" }
magma_math = { path = "../magma_math", version = "0.1.0-alpha" }
magma_windowing = { path = "../magma_windowing", version = "0.1.0-alpha" }
winit = "0.30.9"

# These need to be run on the main thread, which normal tests don't do
[[test]]
name = "winit_tests"
path = "tests/main.rs"
harness = false
